--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 RESEND_API_KEY=re_j8ykjEWc_4rCLaXvuhA4MJGbUJnmVLjnn
 COMPANY_EMAIL=aungzawmyo.azm1997@gmail.com
+PROD_URL = https://tgc-cranes-service-co.vercel.app/
